--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <title>Understanding Typescript</title>
     <script src="dist/app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <p id="message">Hi There</p>
+    <input type="text" id="user-input" />
+  </body>
 </html>
