--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <title>Understanding Typescript</title>
     <script src="dist/app.js" defer></script>
   </head>
-  <body></body>
+  <body id="app"></body>
+  <form id="courseForm">
+    <input type="input" id="title" placeholder="Course title" />
+    <input type="input" id="price" placeholder="Course price" />
+    <button type="submit">Create Course</button>
+  </form>
+  <button id="clickMe">Click Me</button>
 </html>
